--- a/Phân_loại_ảnh_siêu_âm_tim.ipynb
+++ b/Phân_loại_ảnh_siêu_âm_tim.ipynb
@@ -7,7 +7,6 @@
       "name": "Phân_loại_ảnh_siêu_âm_tim.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMbJDRCIsKYt8/dKBdOPB/F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +45,7 @@
         "from collections import namedtuple\n",
         "from sklearn.metrics import classification_report"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -56,25 +55,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w6ts0P599avt",
-        "outputId": "cb22809f-38a3-4764-bf69-e55df1205951"
+        "outputId": "c16cb263-1a3f-4088-d6fa-4993b76e3551"
       },
       "source": [
         "!git clone https://github.com/ngohonggiang/Echocardiography.git"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'Echocardiography'...\n",
-            "remote: Enumerating objects: 8332, done.\u001b[K\n",
-            "remote: Counting objects: 100% (8332/8332), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (8329/8329), done.\u001b[K\n",
-            "remote: Total 8332 (delta 3), reused 8328 (delta 2), pack-reused 0\n",
-            "Receiving objects: 100% (8332/8332), 488.02 MiB | 26.85 MiB/s, done.\n",
-            "Resolving deltas: 100% (3/3), done.\n",
-            "Checking out files: 100% (8327/8327), done.\n"
+            "remote: Enumerating objects: 8335, done.\u001b[K\n",
+            "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Total 8335 (delta 2), reused 7 (delta 2), pack-reused 8328\u001b[K\n",
+            "Receiving objects: 100% (8335/8335), 488.02 MiB | 30.63 MiB/s, done.\n",
+            "Resolving deltas: 100% (4/4), done.\n",
+            "Checking out files: 100% (8328/8328), done.\n"
           ]
         }
       ]
@@ -93,16 +92,38 @@
         "\n",
         "def prepare_data():\n",
         "  size = 224\n",
-        "  transform_train = transforms.Compose([\n",
+        "  # raw\n",
+        "  transform_train_raw = transforms.Compose([\n",
         "    transforms.Resize((size, size)),\n",
         "    transforms.ToTensor()\n",
         "  ])\n",
+        "\n",
+        "  # preprocess\n",
+        "  transform_train_preprocess = transforms.Compose([\n",
+        "    transforms.Resize((size, size)),\n",
+        "    transforms.GaussianBlur(3),\n",
+        "    transforms.RandomRotation(2.8),\n",
+        "    #transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225)),\n",
+        "    transforms.ToTensor()\n",
+        "  ])\n",
+        "\n",
+        "  # augmentation\n",
+        "  transform_train_augmentation = transforms.Compose([\n",
+        "    transforms.Resize((size, size)),\n",
+        "    transforms.RandomCrop(size, padding=4),\n",
+        "    transforms.RandomHorizontalFlip(),\n",
+        "    transforms.ColorJitter(brightness=0.3, contrast=0.1),\n",
+        "    transforms.ToTensor()\n",
+        "  ])\n",
+        "\n",
+        "  # test\n",
         "  transform_test = transforms.Compose([\n",
         "    transforms.Resize((size, size)),                                 \n",
         "    transforms.ToTensor()\n",
         "  ])\n",
+        "\n",
         "  trainset = torchvision.datasets.ImageFolder(\n",
-        "      root='/content/Echocardiography/DATA_CHAMBER_2021/train', transform=transform_train)\n",
+        "      root='/content/Echocardiography/DATA_CHAMBER_2021/train', transform=transform_train_augmentation)\n",
         "  testset = torchvision.datasets.ImageFolder(\n",
         "      root='/content/Echocardiography/DATA_CHAMBER_2021/test', transform=transform_test)\n",
         "  return TrainTest(train=trainset, test=testset)\n",
@@ -113,7 +134,7 @@
         "  testloader = DataLoader(dataset=datasets.test, batch_size=batch_size, shuffle=False, num_workers=2)\n",
         "  return TrainTest(train=trainloader, test=testloader)\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -155,7 +176,7 @@
         "      true += list(labels.cpu().numpy())\n",
         "  return pred, true"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +209,7 @@
         "  loss_function = nn.CrossEntropyLoss()\n",
         "  optimizer = torch.optim.SGD(model.parameters(), lr=0.01, momentum=0.9, weight_decay=5e-4)\n",
         "\n",
-        "  for epoch in range(8):\n",
+        "  for epoch in range(10):\n",
         "    train_epoch(epoch, model, loaders.train, loss_function, optimizer, device)\n",
         "    pred, true = test_epoch(epoch, model, loaders.test, device)\n",
         "    print(classification_report(true, pred, target_names=classes))  \n",
@@ -197,159 +218,52 @@
         "    torch.save(model.state_dict(), PATH)\n",
         "  return model"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8eTqXVgbQ7pv",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a509165b-fcff-4667-d481-84494ed784cd"
+        "id": "8eTqXVgbQ7pv"
       },
       "source": [
         "modelVGG16 = main(model='vgg16')"
       ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "cuda:0\n",
-            "Epoch 0 Step 39 ave_loss 1.0948\n",
-            "Epoch 0 Step 79 ave_loss 1.0031\n",
-            "Epoch 0 Step 119 ave_loss 0.9704\n",
-            "Epoch 0 Step 159 ave_loss 0.6134\n",
-            "Epoch 0 Step 199 ave_loss 0.3671\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "          2C       0.49      0.86      0.62       409\n",
-            "          3C       0.73      0.90      0.81       367\n",
-            "          4C       1.00      0.52      0.69       831\n",
-            "\n",
-            "    accuracy                           0.69      1607\n",
-            "   macro avg       0.74      0.76      0.71      1607\n",
-            "weighted avg       0.81      0.69      0.70      1607\n",
-            "\n",
-            "---------------------------------------------------------------\n",
-            "Epoch 1 Step 39 ave_loss 0.3008\n",
-            "Epoch 1 Step 79 ave_loss 0.1591\n",
-            "Epoch 1 Step 119 ave_loss 0.1438\n",
-            "Epoch 1 Step 159 ave_loss 0.0927\n",
-            "Epoch 1 Step 199 ave_loss 0.1411\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "          2C       0.91      0.97      0.94       409\n",
-            "          3C       0.89      0.94      0.92       367\n",
-            "          4C       1.00      0.94      0.97       831\n",
-            "\n",
-            "    accuracy                           0.95      1607\n",
-            "   macro avg       0.93      0.95      0.94      1607\n",
-            "weighted avg       0.95      0.95      0.95      1607\n",
-            "\n",
-            "---------------------------------------------------------------\n",
-            "Epoch 2 Step 39 ave_loss 0.0557\n",
-            "Epoch 2 Step 79 ave_loss 0.0237\n",
-            "Epoch 2 Step 119 ave_loss 0.0285\n",
-            "Epoch 2 Step 159 ave_loss 0.0097\n",
-            "Epoch 2 Step 199 ave_loss 0.0154\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "          2C       0.56      0.93      0.70       409\n",
-            "          3C       0.89      0.95      0.92       367\n",
-            "          4C       1.00      0.65      0.79       831\n",
-            "\n",
-            "    accuracy                           0.79      1607\n",
-            "   macro avg       0.82      0.84      0.80      1607\n",
-            "weighted avg       0.86      0.79      0.79      1607\n",
-            "\n",
-            "---------------------------------------------------------------\n",
-            "Epoch 3 Step 39 ave_loss 0.0237\n",
-            "Epoch 3 Step 79 ave_loss 0.0580\n",
-            "Epoch 3 Step 119 ave_loss 0.0402\n",
-            "Epoch 3 Step 159 ave_loss 0.0730\n",
-            "Epoch 3 Step 199 ave_loss 0.0288\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "          2C       0.72      1.00      0.84       409\n",
-            "          3C       0.95      0.85      0.90       367\n",
-            "          4C       1.00      0.85      0.92       831\n",
-            "\n",
-            "    accuracy                           0.89      1607\n",
-            "   macro avg       0.89      0.90      0.89      1607\n",
-            "weighted avg       0.92      0.89      0.89      1607\n",
-            "\n",
-            "---------------------------------------------------------------\n",
-            "Epoch 4 Step 39 ave_loss 0.0485\n",
-            "Epoch 4 Step 79 ave_loss 0.0329\n",
-            "Epoch 4 Step 119 ave_loss 0.0175\n",
-            "Epoch 4 Step 159 ave_loss 0.0482\n",
-            "Epoch 4 Step 199 ave_loss 0.0306\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "          2C       0.89      0.94      0.91       409\n",
-            "          3C       0.86      0.88      0.87       367\n",
-            "          4C       1.00      0.96      0.98       831\n",
-            "\n",
-            "    accuracy                           0.94      1607\n",
-            "   macro avg       0.92      0.93      0.92      1607\n",
-            "weighted avg       0.94      0.94      0.94      1607\n",
-            "\n",
-            "---------------------------------------------------------------\n",
-            "Epoch 5 Step 39 ave_loss 0.0054\n",
-            "Epoch 5 Step 79 ave_loss 0.0062\n",
-            "Epoch 5 Step 119 ave_loss 0.0015\n",
-            "Epoch 5 Step 159 ave_loss 0.0005\n",
-            "Epoch 5 Step 199 ave_loss 0.0001\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "          2C       0.93      0.99      0.96       409\n",
-            "          3C       0.82      0.94      0.88       367\n",
-            "          4C       1.00      0.90      0.95       831\n",
-            "\n",
-            "    accuracy                           0.93      1607\n",
-            "   macro avg       0.92      0.94      0.93      1607\n",
-            "weighted avg       0.94      0.93      0.93      1607\n",
-            "\n",
-            "---------------------------------------------------------------\n",
-            "Epoch 6 Step 39 ave_loss 0.0002\n",
-            "Epoch 6 Step 79 ave_loss 0.0008\n",
-            "Epoch 6 Step 119 ave_loss 0.0002\n",
-            "Epoch 6 Step 159 ave_loss 0.0208\n",
-            "Epoch 6 Step 199 ave_loss 0.0028\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "          2C       0.96      0.99      0.97       409\n",
-            "          3C       0.98      0.97      0.98       367\n",
-            "          4C       1.00      0.99      0.99       831\n",
-            "\n",
-            "    accuracy                           0.98      1607\n",
-            "   macro avg       0.98      0.98      0.98      1607\n",
-            "weighted avg       0.98      0.98      0.98      1607\n",
-            "\n",
-            "---------------------------------------------------------------\n",
-            "Epoch 7 Step 39 ave_loss 0.0128\n",
-            "Epoch 7 Step 79 ave_loss 0.0023\n",
-            "Epoch 7 Step 119 ave_loss 0.0008\n",
-            "Epoch 7 Step 159 ave_loss 0.0000\n",
-            "Epoch 7 Step 199 ave_loss 0.0003\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "          2C       0.91      1.00      0.95       409\n",
-            "          3C       0.95      0.97      0.96       367\n",
-            "          4C       1.00      0.94      0.97       831\n",
-            "\n",
-            "    accuracy                           0.96      1607\n",
-            "   macro avg       0.95      0.97      0.96      1607\n",
-            "weighted avg       0.97      0.96      0.96      1607\n",
-            "\n",
-            "---------------------------------------------------------------\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6ZFk5k1XzHmc"
+      },
+      "source": [
+        "modelVGG19 = main(model='vgg19')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xWShWiKGzMzV"
+      },
+      "source": [
+        "modelResNet50 = main(model='resnet50')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dVuqNSpXr7IQ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
